tests/rosetta/transpiler/Clojure/99-bottles-of-beer-2.error
run error: exit status 1
WARNING: next already refers to: #'clojure.core/next in namespace: main, being replaced by: #'main/next
Execution error (ClassCastException) at main/slur (99-bottles-of-beer-2.clj:25).
class java.lang.String cannot be cast to class java.lang.Number (java.lang.String and java.lang.Number are in module java.base of loader 'bootstrap')

Full report at:
/tmp/clojure-9146065816224738317.edn
